# Ray_test_project

./: README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 63d9dae85871_2023_12_04_18_29_initial_migration.py
src/: app.py
src/auth/: manager.py
src/db/: config.py
src/db/dumps/: alembic_command.sh
src/models/: dislikes.py  likes.py  posts.py  users.py
src/repository/: base_repository.py  dislikes_repository.py  likes_repository.py  post_repository.py
src/routes/: celery_worker.py  dislikes.py  likes.py  posts.py
src/schemas/: dislikes.py  likes.py  posts.py
src/task/: tasks.py
src/tasks/: tasks.py
tests/: conftest.py  test_user.py
