[tool.poetry]
name = "ray_test_project"
version = "0.1.0"
description = ""
authors = ["dimetry537 <maksakov1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
alembic = "^1.13.0"
uvicorn = "^0.24.0"
SQLAlchemy = "^2.0.23"
asyncpg = "^0.29.0"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
celery = "^5.3.6"
flower = "^2.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
